# xsoar-dockerfiles

./: pyproject.toml
docker/ansible-runner/: pyproject.toml
docker/auth-utils/: pyproject.toml
docker/commvault/: Pipfile
docker/confluent-kafka/: Pipfile
docker/crypto/: Pipfile
docker/demisto-sdk/: pyproject.toml
docker/flask-nginx/: Pipfile
docker/graphql/: Pipfile
docker/kubernetespy/: Pipfile
docker/ml/: Pipfile  pyproject.toml
docker/mlurlphishing/: pyproject.toml
docker/netutils/: pyproject.toml
docker/oci/: Pipfile
docker/opencti/: Pipfile
docker/powershell/: Dockerfile
docker/powershell-deb/: Dockerfile
docker/py-ews/: Pipfile
docker/py3-tools/: pyproject.toml
docker/py3-tools-ubi/: pyproject.toml
docker/pymisp2/: Pipfile
docker/python/: Dockerfile
docker/python3/: Dockerfile
docker/python3-deb/: Dockerfile
docker/sklearn/: Pipfile
docker/syslog/: Pipfile
docker/teams/: Pipfile
docker/tidy/: Pipfile
docker/trustar/: requirements.txt
docker/xsoar-tools/: pyproject.toml
docker/xsoar-tools-hf/: Pipfile
