[tool.poetry]
name = "dockerfiles"
version = "0.1.0"
description = ""
authors = ["Judah Schwartz <juschwartz@paloaltonetworks.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "==4.9.0.80"  # using previous version until fixed https://github.com/opencv/opencv-python/issues/676
scikit-learn = "==1.4.1.post1"
pandas = "==2.2.1"
beautifulsoup4 = "*"
dill = "==0.3.8"
catboost = "==1.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
