[tool.poetry]
name = "netutils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
requests = {extras = ["socks"],version = "*"}
netaddr = "*"
python-libnmap = "*"
websockets = ">=16.1"
dnspython = "*"
aiohttp = ">=3.14.1"
aiolimiter = "*"
psutil = "7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"